DO NOT MERGE WiMAX settings menu
1. Show the 4G menu.
2. Show the 4G MAC address
3. Execute 4G setting apk.

Change-Id: Id9d5551e5bfdb7d79279de42b36ec0ebccdf6099
Signed-off-by: TK MUN <tk.mun@samsung.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2650,7 +2650,7 @@ found in the list of installed applications.</string>
     <string name="sound_category_notification_title">Notifications</string>
     <string name="sound_category_feedback_title">Feedback</string>
 
-    <!-- Widget Picker -->
-    <string name="widget_count">(%d widgets)</string>
-
+    <string name="wimax_settings">4G settings</string>
+    <string name="wimax_settings_summary">Set up &amp; manage 4G network and modem</string>
+    <string name="status_wimax_mac_address">4G MAC address</string>
 </resources>
